; ModuleID = '/home/carl/AnghaBench/tig/src/extr_graph-v2.c_done_graph.c'
source_filename = "/home/carl/AnghaBench/tig/src/extr_graph-v2.c_done_graph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.graph = type { %struct.graph_v2* }
%struct.graph_v2 = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@intern_string_htab = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.graph*)* @done_graph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @done_graph(%struct.graph* %0) #0 {
  %2 = alloca %struct.graph*, align 8
  %3 = alloca %struct.graph_v2*, align 8
  store %struct.graph* %0, %struct.graph** %2, align 8
  %4 = load %struct.graph*, %struct.graph** %2, align 8
  %5 = getelementptr inbounds %struct.graph, %struct.graph* %4, i32 0, i32 0
  %6 = load %struct.graph_v2*, %struct.graph_v2** %5, align 8
  store %struct.graph_v2* %6, %struct.graph_v2** %3, align 8
  %7 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %8 = getelementptr inbounds %struct.graph_v2, %struct.graph_v2* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @htab_delete(i32 %10)
  %12 = load %struct.graph_v2*, %struct.graph_v2** %3, align 8
  %13 = call i32 @free(%struct.graph_v2* %12)
  %14 = load i64, i64* @intern_string_htab, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %1
  %17 = load i64, i64* @intern_string_htab, align 8
  %18 = call i32 @htab_empty(i64 %17)
  br label %19

19:                                               ; preds = %16, %1
  ret void
}

declare dso_local i32 @htab_delete(i32) #1

declare dso_local i32 @free(%struct.graph_v2*) #1

declare dso_local i32 @htab_empty(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
